[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "claudeplexer-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click",
    "jinja2",
]

[project.scripts]
claudeplexer = "claudeplexer.cli:main"
[tool.hatch.build.targets.wheel]
packages = ["src/claudeplexer"]
sources = ["src"]
[tool.hatch.build.targets.sdist]
include = ["src/claudeplexer/py.typed"]
